--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  width: 100vw;
+}
+body {
+  min-width: 390px;
+  max-width: 1440px;
+}
+
+.container {
+  width: 1380px;
+  margin: 0 auto;
+}
