--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,11 @@ body {
 .container {
   width: 1380px;
   margin: 0 auto;
+  /* margin: 0, 30px 0, 30px; */
+}
+@media screen and (max-width: 400px) {
+  .container {
+    padding-left: 5px;
+    padding-right: 10px;
+  }
 }
